--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.4.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
@@ -38,7 +38,6 @@
     "@nestjs/testing": "^10.0.0",
     "@swc/cli": "^0.5.1",
     "@swc/core": "^1.9.3",
-    "@types/express": "^5.0.0",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
