--- a/.env.template
+++ b/.env.template
@@ -12,3 +12,8 @@ USER_PASSWORD_SALT=
 USER_PASSWORD_SALT_ITERATIONS=
 USER_PASSWORD_HASHING_ALGORITHM=
 USER_PASSWORD_HASH_KEYLEN=
+
+# PostHog Configuration
+POSTHOG_API_KEY=
+POSTHOG_HOST=
+POSTHOG_ENABLED=
