--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-fastify": "^10.4.9",
+    "fastify": "^5.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "posthog-node": "^4.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
