--- a/.env.template
+++ b/.env.template
@@ -17,3 +17,8 @@ USER_PASSWORD_HASH_KEYLEN=
 POSTHOG_API_KEY=
 POSTHOG_HOST=
 POSTHOG_ENABLED=
+
+# Google OAuth Credentials
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
