--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-fastify": "^10.4.9",
-    "fastify": "^5.1.0",
+    "@nestjs/platform-express": "^10.0.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-oauth2": "^1.8.0",
     "posthog-node": "^4.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -41,6 +42,7 @@
     "@swc/cli": "^0.5.1",
     "@swc/core": "^1.9.3",
     "@types/node": "^20.3.1",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
@@ -58,6 +60,7 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3",
     "unplugin-swc": "^1.5.1",
-    "vitest": "^2.1.6"
+    "vitest": "^2.1.6",
+    "@types/express": "^4.17.21"
   }
 }
