Integrated Prisma ORM with Mongo

--- a/.env.template
+++ b/.env.template
@@ -22,3 +22,6 @@ POSTHOG_ENABLED=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
+
+# Database Configuration
+DATABASE_CONNECTION_STRING=
