--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.22.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -42,6 +44,7 @@
     "@nestjs/testing": "^10.0.0",
     "@swc/cli": "^0.5.1",
     "@swc/core": "^1.9.3",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.3.1",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/supertest": "^6.0.0",
@@ -62,7 +65,6 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3",
     "unplugin-swc": "^1.5.1",
-    "vitest": "^2.1.6",
-    "@types/express": "^4.17.21"
+    "vitest": "^2.1.6"
   }
 }
