--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.15.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -54,9 +56,10 @@
     "@vitest/coverage-istanbul": "2.1.6",
     "@vitest/coverage-v8": "^2.1.6",
     "@vitest/ui": "^2.1.6",
-    "eslint": "^8.0.0",
+    "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "globals": "^15.12.0",
     "prettier": "^3.0.0",
     "prisma": "^5.22.0",
     "source-map-support": "^0.5.21",
