--- a/.env.template
+++ b/.env.template
@@ -14,9 +14,9 @@ USER_PASSWORD_HASHING_ALGORITHM=
 USER_PASSWORD_HASH_KEYLEN=
 
 # PostHog Configuration
-POSTHOG_API_KEY=
-POSTHOG_HOST=
-POSTHOG_ENABLED=
+# POSTHOG_API_KEY=
+# POSTHOG_HOST=
+# POSTHOG_ENABLED=
 
 # Google OAuth Credentials
 GOOGLE_CLIENT_ID=
