Added Neo4j configuration and service integration

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,11 @@ GOOGLE_CALLBACK_URL=
 
 # Database Configuration
 DATABASE_CONNECTION_STRING=
+
+# Neo4j Database Configuration
+NEO4J_SCHEME=neo4j
+NEO4J_HOST=localhost
+NEO4J_PORT=7687
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=your_password_here
+NEO4J_DATABASE=neo4j
