--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "keyword-extractor": "^0.0.28",
     "nest-neo4j": "^0.3.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
