--- a/package.json
+++ b/package.json
@@ -21,58 +21,59 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^11.1.0",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.4.17",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.17",
+    "@nestjs/swagger": "^11.1.6",
     "@prisma/client": "^5.22.0",
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "class-validator": "^0.14.2",
     "keyword-extractor": "^0.0.28",
     "nest-neo4j": "^0.3.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.8.0",
-    "posthog-node": "^4.3.1",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "posthog-node": "^4.17.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.15.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.26.0",
     "@golevelup/ts-vitest": "^0.5.2",
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@swc/cli": "^0.5.1",
-    "@swc/core": "^1.9.3",
+    "@nestjs/cli": "^10.4.9",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.17",
+    "@swc/cli": "^0.5.2",
+    "@swc/core": "^1.11.24",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.17.32",
     "@types/passport-google-oauth20": "^2.0.16",
-    "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
     "@vitest/coverage-istanbul": "2.1.6",
-    "@vitest/coverage-v8": "^2.1.6",
-    "@vitest/ui": "^2.1.6",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "globals": "^15.12.0",
-    "prettier": "^3.0.0",
+    "@vitest/coverage-v8": "^2.1.9",
+    "@vitest/ui": "^2.1.9",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.3.1",
+    "globals": "^15.15.0",
+    "prettier": "^3.5.3",
     "prisma": "^5.22.0",
     "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "supertest": "^7.1.0",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "unplugin-swc": "^1.5.1",
-    "vitest": "^2.1.6"
+    "typescript": "^5.8.3",
+    "unplugin-swc": "^1.5.2",
+    "vitest": "^2.1.9"
   },
   "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f"
 }
